--- a/ecommerce/store/template/store/cart.html
+++ b/ecommerce/store/template/store/cart.html
@@ -10,7 +10,7 @@
 <table class="table">
  <tr>
   <th><h5>Items: <strong>{{items}}</strong></h5></th>
-  <th><h5>Total: <strong>${{price}}</strong></h5></th>
+  <th><h5>Total: <strong>${{total_price}}</strong></h5></th>
   
  </tr>
 </table>
