--- a/ecommerce/store/template/store/main.html
+++ b/ecommerce/store/template/store/main.html
@@ -13,10 +13,13 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- custom css -->
     <link rel="stylesheet" href="{% static 'css/stor.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/product_view.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/createproduct.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'css/viewpage1.css' %}" type="text/css" />
     <!-- ---------------------------------------------------------------------------------------------- -->
     
     
