--- a/ecommerce/static/css/store.css
+++ b/ecommerce/static/css/store.css
@@ -81,7 +81,7 @@ body{
    box-shadow: hsl(0, 0%, 80%) 0 0 16px;
 }
 .
-.container input[type=email] {
+.container select option {
   width: 100%;
   box-sizing: border-box;
   border: 2px solid whitesmoke ;
@@ -96,10 +96,4 @@ body{
   transition: width 0.4s ease-in-out;
 }
 
-input[type=text]:focus {
-  width: 100%;
-  
-}
-input[type=email]:focus {
-  width: 100%;
-}
+
