--- a/ecommerce/store/template/store/cart.html
+++ b/ecommerce/store/template/store/cart.html
@@ -2,6 +2,13 @@
 {% load static %}
 {% block content %}
 <div class="row">
+  <div class="col-lg-12 text-center text-success my-5">
+    <i class="far fa-heart prefix fa-3x"></i>
+    <h2>My wishlist</h2>
+    <hr>
+  </div>
+</div>
+<div class="row">
  <div class="col-lg-12 mt-1">
   <div class="box-element">
 <a class="btn btn-outline-dark" href="{% url 'store' %}">&#8592; Continue Shopping</a>
@@ -11,11 +18,17 @@
  <tr>
   <th><h5>Items: <strong>{{items}}</strong></h5></th>
   <th><h5>Total: <strong>${{total_price}}</strong></h5></th>
+  <th><h5> <form action="" method="POST">
+    {% csrf_token %}
+    
+    <button class="btn btn-danger" style="width: 120px;" type="submit">Remove All</button>
+  </form></h5></th>
   
  </tr>
 </table>
   </div>
   <br>
+  
   <div class="box-element">
   
 <div class="cart-row">
@@ -33,19 +46,21 @@
  <div style="flex: 3;"><img style="width: 100px;" class="img-fluid" src="{{cart.img.url}}" alt=""></div>
  <div style="flex: 3;" class="mt-4">{{cart.name}}</div>
  <div style="flex: 3;" class="mt-4">${{cart.price}}</div>
- <div style="flex: 3;" class="mt-4"><p class="quantity">2</p>
- <div class="quantity">
-  <img class="chg-quantity" src="{% static 'images/arrow-up.png' %}" alt="">
-  <img class="chg-quantity" src="{% static 'images/arrow-down.png' %}" alt="">
-  
- </div>
+ <div style="flex: 3;" class="mt-4"><p class="quantity">1</p>
+ 
  </div>
  <div style="flex: 2;" class="mt-4">{{cart.price}}</div>
- <div style="flex: 2;" class="mt-4"><a href="/market/{{cart.id}}/delete" class="btn btn-outline-dark">Remove</a></div>
+ <div style="flex: 2;" class="mt-4"><a href="/market/{{cart.id}}/delete" class="btn btn-outline-dark"><i class="fas fa-trash-alt"></i></a></div>
 
  <br>
  </div>
  {% endfor %}
+ {% if items == 0 %}
+ <div class="row"><div class="col-lg-12 text-center my-5">
+<img class="img-fluid" src="{% static 'images/Wishlist.png' %}" alt="">
+ </div></div>
+
+ {%endif%}
  
 </div>
   </div>
