--- a/ecommerce/home/templates/index.html
+++ b/ecommerce/home/templates/index.html
@@ -31,6 +31,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar fixed-top">
   
     <div class="container">
+      
   
       <!-- Navbar brand -->
       <a class="navbar-brand" href="#"><img style="width: 70px;" src="{% static 'images/FPOlogo.png' %}" alt=""></a>
@@ -81,19 +82,39 @@
       <a class="nav-link mr-2" href="{% url 'logout' %}"><i  class="fa fa-sign-in-alt"></i>
       Logout</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link mr-2" href="#"><i  class="fab fa-blogger-b"></i>
-      Blogs</a>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+        aria-expanded="false">
+        <i class="united kingdom flag m-0"></i>{{user_email|slice:"0:15"}}
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li>
+          <a class="dropdown-item" href="#"><i class="fab fa-blogger-b"></i> Blogs
+            </a>
+        </li>
+        
+        <li>
+          <hr class="dropdown-divider" />
+        </li>
+        {% if request.user.is_staff %}
+        <li class="nav-item">
+          <a class="dropdown-item" href="#"><i class="fab fa-blogger-b"></i> Courses
+          </a>
+        </li>
+        <li>
+        <hr class="dropdown-divider" />
+        </li>
+        <li>
+          <a class="dropdown-item" href="#"><i class="fab fa-blogger-b"></i> Dashboard
+          </a>
+        </li>
+        
+        {% endif %}
+        
+      </ul>
     </li>
-    {% if request.user.is_staff %}
-    <li class="nav-item">
-      <a class="nav-link mr-5" href="#"><i  class="fa fa-book"></i>
-      Courses</a>
-    </li>
-    {% comment %} <li class="nav-item">
-      <a class="nav-link mr-5" href="admin/store/cart/"><i class="fa fa-book"></i> Admin</a>
-    </li> {% endcomment %}
-    {% endif %}
+    
+   
     
     
     {% else %}
