--- a/ecommerce/store/template/store/viewpage.html
+++ b/ecommerce/store/template/store/viewpage.html
@@ -44,32 +44,32 @@
                   </ol>
                   <!--/.Indicators-->
                   <!--Slides-->
-                  <div class="carousel-inner z-depth-1-half " role="listbox">
+                  <div class="carousel-inner z-depth-1 " role="listbox">
                     <!--First slide-->
                     <div class="row">
                       <div class="col-lg-8 pl-5 ml-5">
                         <div class="carousel-item active " >
-              <img   class=" d-block w-100 img-fluid  img-thumbnail"
+              <img   class=" d-block w-100 img-fluid  "
                           src="{{product.product_img1.url}}" alt="First slide">
                         </div>
                         <!--/First slide-->
                         <!--Second slide-->
                         <div class="carousel-item " >
-                          <img  class="d-block w-100 img-fluid img-thumbnail"
+                          <img  class="d-block w-100 img-fluid "
                             src="{{product.product_img2.url}}" alt="Second slide">
                         </div>
                         <!--/Second slide-->
                         <!--Third slide-->
                         <div class="carousel-item" >
-                          <img  class="d-block w-100 img-fluid img-thumbnail"
+                          <img  class="d-block w-100 img-fluid "
                             src="{{product.product_img3.url}}" alt="Third slide">
                         </div>
                         <div class="carousel-item">
-                          <img  class="d-block w-100 img-fluid img-thumbnail"
+                          <img  class="d-block w-100 img-fluid "
                             src="{{product.product_img4.url}}" alt="Third slide">
                         </div>
                         <div class="carousel-item">
-                          <img  class="d-block w-100 img-fluid img-thumbnail"
+                          <img  class="d-block w-100 img-fluid"
                             src="{{product.product_img5.url}}" alt="Third slide">
                         </div>
   
@@ -291,11 +291,12 @@
           <h2 class="my-2">{{fpo.fpo_name}}</h2>
         <h5>{{fpo.fpo_area}} , India</h5>
       <h6><i class="fas fa-users"></i>Members: {{fpo.total_members}} </h6>
-      <a href="#" class="btn btn-danger">Contact</a>
+      <a href="#contact" class="btn btn-danger">Contact</a>
       </div>
         
        <div class="col-lg-6"><img class="img-fluid img-thumbnail " style="width: 600px;" src="{{fpo.fpo_img.url}}" alt=""></div>
       <div class="col-lg-12 my-3">
+        <h3 class="text-primary my-4">About:</h3>
         Surangani Voluntary Services (SVS) has been working to develop better learning environments for children in Sri Lanka
         since 1992. They support preschools in disadvantaged communities, provide educational necessities for children in
         low-income families, and publish picture books and children’s songs in Sinhala, Tamil, and English. In 2011, SVS
@@ -305,8 +306,53 @@
         peanuts and deviled peanuts are popular snacks and gifts.
       </div>
       <div class="col-lg-12">
-        <h2>Contact</h2>
         
+        <section id="contact">
+          <h2 class="font-weight-bolder text-center my-5">Contact us</h2>
+          <div class="row">
+            <div class="col-lg-5 col-md-12">
+              <form class="p-5 grey-text" method="POST">
+                {% csrf_token %}
+                <div class="md-form form-sm"> <i class="fa fa-user prefix"></i>
+                  <input type="text" id="form3" name="name" class="form-control form-control-sm">
+                  <label for="form3">Your name</label>
+                </div>
+                <div class="md-form form-sm"> <i class="fa fa-user prefix"></i>
+                  <input type="number" id="form" name="number" class="form-control form-control-sm">
+                  <label for="form">Phone number</label>
+                </div>
+                <div class="md-form form-sm"> <i class="fa fa-envelope prefix"></i>
+                  <input type="text" id="form2" name="email" class="form-control form-control-sm">
+                  <label for="form2">Your email</label>
+                </div>
+                <div class="md-form form-sm"> <i class="fa fa-tag prefix"></i>
+                  <input type="text" id="form34" name="subject" class="form-control form-control-sm">
+                  <label for="form34">Subject</label>
+                </div>
+                <div class="md-form form-sm"> <i class="fa fa-pencil prefix"></i>
+                  <textarea type="text" id="form8" name="message" class="md-textarea form-control form-control-sm" rows="4"></textarea>
+                  <label for="form8">Your message</label>
+                </div>
+                <div class="text-center mt-4">
+                  <button class="btn btn-primary">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
+                </div>
+              </form>
+              <!-- Form contact -->
+            </div>
+           <div class="col-lg-7 text-center mt-5">
+            <h4 class="mt-5 text-primary">Contact Info:
+            </h4>
+             <h1 class="mt-5"></h1>
+             
+            <h5 ><i class="fa fa-envelope my-2  text-success"></i> {{fpo.fpo_email}}</h5>
+            <h5 ><i class="fas fa-phone-alt text-success my-2"></i> 9399222222</h5>
+            <h5 ><i class="fas fa-phone-alt text-success my-2"></i> 9399222222</h5>
+            <h5>{{fpo.fpo_area}} , India</h5>
+            <h5>Pincode: {{fpo.area_pincode}}</h5>
+           </div>
+          </div>
+          </div>
+        </section>
       </div>
       </div>
        
