--- a/ecommerce/home/templates/index.html
+++ b/ecommerce/home/templates/index.html
@@ -85,11 +85,15 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
         aria-expanded="false">
-        <i class="united kingdom flag m-0"></i>{{user_email|slice:"0:15"}}
+        <i class="united kingdom flag m-0"></i>{{request.user.email|slice:"0:15"}}
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li>
           <a class="dropdown-item" href="#"><i class="fab fa-blogger-b"></i> Blogs
+            </a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="{% url 'fpo_list' %}"><i class="fas fa-users"></i> FPO's
             </a>
         </li>
         
@@ -98,14 +102,14 @@
         </li>
         {% if request.user.is_staff %}
         <li class="nav-item">
-          <a class="dropdown-item" href="#"><i class="fab fa-blogger-b"></i> Courses
+          <a class="dropdown-item" href="#"><i class="fas fa-address-book"></i> Courses
           </a>
         </li>
         <li>
         <hr class="dropdown-divider" />
         </li>
         <li>
-          <a class="dropdown-item" href="#"><i class="fab fa-blogger-b"></i> Dashboard
+          <a class="dropdown-item" href="#"><i class="fas fa-chart-line"></i> Dashboard
           </a>
         </li>
         
@@ -159,8 +163,10 @@
           
   
           <!-- Description -->
-          <h4    class="white-text my-2 text-center  " >Welcome to a community of farmers.
-          </h4>
+          
+          <h4 class="text-white">Welcome to a community of farmers.
+          
+         </h5>
           <div class="col-lg-10"></div>
           <div class="col-lg-3 mt-2">
             {% if user.is_authenticated and user.is_staff  %}
@@ -235,7 +241,7 @@
     <div class="container text-center">
       <h2 class="font-weight-bolder mb-5">Gallary Heading</h2>
       <div class="row">
-        <div class="col-md-6 mb-5">
+        <div class="col-md-5 mb-5">
 <!--Carousel Wrapper-->
 <div id="carousel-example-1z" class="carousel slide carousel-fade carousel-fade" data-ride="carousel">
   <!--Indicators-->
@@ -249,17 +255,17 @@
   <div class="carousel-inner z-depth-1-half" role="listbox">
     <!--First slide-->
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(130).jpg" alt="First slide">
+      <img class="d-block w-100 " src="{% static 'images/gallary1.jpg' %}" alt="First slide">
     </div>
     <!--/First slide-->
     <!--Second slide-->
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(129).jpg" alt="Second slide">
+    <div class="carousel-item ">
+      <img class="d-block w-100" src="{% static 'images/gallary2.jpg' %}" alt="Second slide">
     </div>
     <!--/Second slide-->
     <!--Third slide-->
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" alt="Third slide">
+      <img class="d-block w-100"  src="{% static 'images/gallary3.jpg' %}" alt="Third slide">
     </div>
     <!--/Third slide-->
   </div>
@@ -277,16 +283,24 @@
         </div>
         
       </div>
-      <div class="col-md-6 ">
+      <div class="col-md-7 ">
         
-        <h2 class="my-3 green-text"><span class="fa fa-heart fa-1x green-text "></span>LifeStyle</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non sapiente quis velit fugiat. Autem, hic reiciendis quia
-          dolores aspernatur dolorum perferendis explicabo velit odio asperiores dolorem beatae obcaecati consequuntur quod.
+        <h2 class="my-3 green-text"><span class="fa fa-heart fa-1x green-text "></span>Our Mission</h2>
+        <b>&quot;Reduce vulnerability, build resilience and empower the community through
+        strengthening aquatic-based livelihood opportunities.&quot;</b>
+        <p>
+        
+        
+        
+        Jaljeevika transforms lives by improving access to knowledge, institutions and markets in the poorest
+        communities to establish a water-based livelihood portfolio. We work with local partners, community-
+        based institutions and the private sector to maximize our impact.
         </p>
-        <p class="text-left">by <b>Ashutosh</b> 30/6/2020-</p>
-        <a href="#" class="btn btn-primary">READ MORE</a>
+        <p class="text-left">by <b>Jaljeevika</b> 30/6/2020-</p>
+        <a href="https://www.jaljeevika.org/" target="#" class="btn btn-primary">READ MORE</a>
       </div>
     </div>
+    <!-- hhhhhhh -->
   </section>
   <div class="container">
     <hr class="mt-5">
