--- a/ecommerce/store/template/store/main.html
+++ b/ecommerce/store/template/store/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% comment %} fontawesoem {% endcomment %}
+    
     <script src="https://kit.fontawesome.com/e16be2307c.js" crossorigin="anonymous"></script>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
@@ -18,27 +19,24 @@
     <link rel="stylesheet" href="{% static 'css_bs/mdb.min.css' %}">
     <!-- Your custom styles (optional) -->
     <link rel="stylesheet" href="{% static 'css_bs/style1.css' %}">
+   
     <!-- bootstrap css -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   
 
     <!-- custom css -->
     <link rel="stylesheet" href="{% static 'css/store.css' %}" type="text/css" />
-    <link rel="stylesheet" href="{% static 'css/product_view.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'css/product_view1.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'css/fpo_view.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/createproduct.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/viewpage2.css' %}" type="text/css" />
+   
     <!-- ---------------------------------------------------------------------------------------------- -->
     
     
     <title>Ecommerce</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="customnav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent " id="customnav">
       <a class="navbar-brand" href="{% url 'store' %}"><img style=' width:99px; margin-left:60px'  src="{% static 'images/logo1.png' %}" alt=""></a>
       <button
         class="navbar-toggler"
@@ -54,32 +52,27 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link text-dar" href="{% url 'store' %}"
+          <li class="nav-item activ">
+            <a class="nav-link " href="{% url 'store' %}"
               >Store <i style="color:green" class="fas fa-store"></i> <span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item active">
-            <a class="nav-link text-dar" href="{% url 'home' %}"
+          <li class="nav-item activ">
+            <a class="nav-link " href="{% url 'home' %}"
               >Home <i style="color:green" class="fa fa-home"></i> <span class="sr-only">(current)</span></a
             >
           </li>
           
         </ul>
-        <div class="form-inline my-2 my-lg-0">
+        
          
 {% if user.is_authenticated and user.is_staff %}
          <sub><a href="{% url 'cart' %}"><i class="fab fa-gratipay fa-3x"></i>
           </sub>
          
-          
-          <p id="cart-total">{{total_items_in_cart}}</p>
+                   <p id="cart-total">{{total_items_in_cart}}</p>
         </a>
-          <!-- -----------------------------createproduct-------------------------------------------------- -->
           
-          
-          
-          <!-- -----------------------------createproduct-------------------------------------------------- -->
           <a href="{% url 'createview' %}" class=" ml-4 text-dark"> <i style="color:green" class="fas fa-plus"></i> Product</a>
           <a href="{% url 'logout' %}" class=" ml-4 text-dark">Logout <i style="color:red" class="fas fa-sign-out-alt"></i></a>
 {% elif user.is_authenticated  %}
@@ -95,11 +88,12 @@
           <a href="{% url 'signup' %}" class="text-dark ml-3">Sign Up <i style="color:green" class="fas fa-user-plus"></i></a>
          </a>
          {% endif %}
-        </div>
+        
         
           
        
       </div>
+    
     </nav>
 
     <div class="container">
@@ -110,24 +104,10 @@
     <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
+    
     <!-- -------------------------------------------------------------------------------------------- -->
     
-    <script src="{% static 'js/prduct_view.js' %}"></script>
+    <script src="{% static 'js/product_view.js' %}"></script>
     <script src="{% static 'js/createproduct.js' %}"></script>
   </body>
 </html>
