--- a/ecommerce/store/template/store/viewpage.html
+++ b/ecommerce/store/template/store/viewpage.html
@@ -286,7 +286,8 @@
       </div>
       <div id="menu3" class="container tab-pane fade"><br>
         
-        <div class="row"><div class="col-lg-6 text-center">
+        <div class="row">
+          <div class="col-lg-6 text-center">
           <img src="{% static 'images/farm4.png' %}" class="mt-5" style="width: 60px; height: 60px; border: 50%;" alt="">
           <h2 class="my-2">{{fpo.fpo_name}}</h2>
         <h5>{{fpo.fpo_area}} , India</h5>
@@ -297,13 +298,7 @@
        <div class="col-lg-6"><img class="img-fluid img-thumbnail " style="width: 600px;" src="{{fpo.fpo_img.url}}" alt=""></div>
       <div class="col-lg-12 my-3">
         <h3 class="text-primary my-4">About:</h3>
-        Surangani Voluntary Services (SVS) has been working to develop better learning environments for children in Sri Lanka
-        since 1992. They support preschools in disadvantaged communities, provide educational necessities for children in
-        low-income families, and publish picture books and children’s songs in Sinhala, Tamil, and English. In 2011, SVS
-        established the Little Tree Center for special needs children in Buttala. They have a small snack factory and handicraft
-        workshop to provide continuous support for the center. Little T’s peanuts are grown with no synthetic agrichemicals by
-        the mothers of special needs children and are processed and packed in the snack factory. Their kithul jaggery roasted
-        peanuts and deviled peanuts are popular snacks and gifts.
+        {{fpo.fpo_description}}
       </div>
       <div class="col-lg-12">
         
@@ -334,7 +329,7 @@
                   <label for="form8">Your message</label>
                 </div>
                 <div class="text-center mt-4">
-                  <button class="btn btn-primary">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
+                  <button type="submit" class="btn btn-primary">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
                 </div>
               </form>
               <!-- Form contact -->
