--- a/ecommerce/store/template/store/allfpos.html
+++ b/ecommerce/store/template/store/allfpos.html
@@ -22,7 +22,7 @@
         <div id="accordion">
           <div class="car z-depth-1">
             <div class="card-header">
-              <a class="card-link" data-toggle="collapse" href="#collapseOne">
+              <a class="card-link" data-toggle="collapse" href="#collapseOne" style="color: #1ce6e6; font-weight: 700;">
                 <i class="fas fa-filter"></i> Filter <i style="padding-left: 220px;" class="fas fa-angle-down"></i>
               </a>
             </div>
@@ -31,8 +31,8 @@
                 <div id="accordion1">
                   <div class="car ">
                     <div class="card-header">
-                      <a class="card-link" data-toggle="collapse" href="#collapseOne1">
-                        Category <i onclick="upsideDown()" style="padding-left: 173px;" class="fas fa-angle-down"></i>
+                      <a class="card-link" data-toggle="collapse" href="#collapseOne1" style="color: #1ce6e6; font-weight: 700;">
+                        Category <i onclick="upsideDown()" style="padding-left: 165px;" class="fas fa-angle-down"></i>
                       </a>
                     </div>
                     <div id="collapseOne1" class="collapse " data-parent="#accordion1">
@@ -97,7 +97,7 @@
      <div class="view_wrap list-view" style="display: block;">
       <div class="row ">
        {% for fpo in fpos %}
-       <div style="border-top: 4px solid #b71ebd;"
+       <div style="border-top: 4px solid #1ce6e6;"
         class="{{fpo.fpo_category}} resultblock col-lg-4 col-md-6 col-6 col-sm-6 text-center img-thumbnail my-2">
         <div class="vi_left">
    
@@ -106,11 +106,11 @@
         <div class="vi_right">
           {{fpo.fpo_name}} <br>
          
-         <i class="fas fa-users text-secondary"></i> {{fpo.total_members}} <br>
-         <i class="fas fa-compass text-secondary"></i> {{fpo.fpo_area}} <br>
+         <i class="fas fa-users " style="color: #1ce6e6;"></i> {{fpo.total_members}} <br>
+         <i class="fas fa-compass" style="color: #1ce6e6;"></i> {{fpo.fpo_area}} <br>
          {{fpo.fpo_description|slice:"0:50"}}...
         
-         <a class="btn btn-secondary ml-3" href="/market/fpo_view/{{fpo.id}}/">More...</a>
+         <a style="color: white; background-color: #1ce6e6;" class="btn  ml-3" href="/market/fpo_view/{{fpo.id}}/">More...</a>
    
          
         </div>
@@ -129,7 +129,7 @@
      <div class="row">
       {% for fpo in fpos %}
    
-      <div style="border-left: 4px solid #b71ebd;"
+      <div style="border-left: 4px solid #1ce6e6;"
        class="{{fpo.fpo_category}} resultblock col-lg-12 my-2    img-thumbnail">
        <div class="row">
         <div class="col-lg-2 col-md-3 col-3 col-sm-3 mt-2">
@@ -139,17 +139,17 @@
    
    
         <div class="col-lg-6 col-4 col-md-5 col-sm-6  text-center">
-         <h4 class="title mt-3 text-secondary font-weight-normal" >{{fpo.fpo_name}}</h4>
+         <h4 class="title mt-3  font-weight-normal" style="color:#1ce6e6;">{{fpo.fpo_name}}</h4>
    
         {{fpo.fpo_description|slice:"0:60"}}... <br>
       
    
         </div>
         <div class="col-lg-4 col-4 col-md-4 col-sm-3 text-center" style="border-left: 1px solid grey;">
-        <i class="fas fa-users pt-4 text-secondary"></i> {{fpo.total_members}} <br>
-        <i class="fas fa-compass text-secondary"></i> {{fpo.fpo_area}} <br>
+        <i class="fas fa-users pt-4 " style="color: #1ce6e6;"></i> {{fpo.total_members}} <br>
+        <i class="fas fa-compass " style="color: #1ce6e6;"></i> {{fpo.fpo_area}} <br>
         
-         <a class="btn btn-secondary mb-3" " href=" /market/fpo_view/{{fpo.id}}/">More...</a>
+         <a style="color: white; background-color: #1ce6e6;" class="btn  mb-3" " href=" /market/fpo_view/{{fpo.id}}/">More...</a>
    
         </div>
        </div>
