--- a/ecommerce/users/template/login.html
+++ b/ecommerce/users/template/login.html
@@ -131,7 +131,7 @@
             <button class="btn btn-primary" type="submit">Login <i class="fa fa-paper-plane-o ml-1"></i></button>
           </div>
         </form>
-        <p class="forgot-pass grey-text">Forgot Password ?</p>
+        <a href="{% url 'password_reset' %}"> Forget Password?</a>
         <p class="forgot-pass grey-text">Need An Account ?<a href="{% url 'signup' %}">signup</a></p>
       </div>
 
