--- a/ecommerce/store/template/store/cart.html
+++ b/ecommerce/store/template/store/cart.html
@@ -53,6 +53,7 @@
  <div style="flex: 2;" class="mt-4"><a href="/market/{{cart.id}}/delete" class="btn btn-outline-dark"><i class="fas fa-trash-alt"></i></a></div>
 
  <br>
+  <a class="btn btn-primary ml-3 mt-4" href="/market/fpo_view/{{cart.fpo_id}}/">View</a>
  </div>
  {% endfor %}
  {% if items == 0 %}
