--- a/ecommerce/store/template/store/createproduct.html
+++ b/ecommerce/store/template/store/createproduct.html
@@ -112,7 +112,7 @@
                                           <button type="button" class="btn btn-success" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
                                           <button type="button" class="btn btn-secondary" id="nextBtn" onclick="nextPrev(1)">Next</button>
                                     </div>
-                                    <a href="{% url 'store' %}" class="btn btn-primary"> Cancle</a>
+                                    <input value="Cancle" type="button" class="btn btn-primary" onclick="history.go(-1)">
                               </div>
                               <!-- Circles which indicates the steps of the form: -->
                               <div style="text-align:center;margin-top:40px;">
