--- a/ecommerce/store/template/store/delete_fpo_product.html
+++ b/ecommerce/store/template/store/delete_fpo_product.html
@@ -9,9 +9,7 @@
    <h6><strong>{{object.product_name}}</strong></h6>
    <hr>
 
-   {% comment %} <a href="#" class="btn btn-outline-success">Add to cart</a> {% endcomment %}
-
-   {% comment %} <a href="/{{product.id}}/" class="btn btn-outline-dark">Add to cart</a> {% endcomment %}
+   
 
 
 
@@ -27,8 +25,9 @@
    <!-- Security token by Django -->
    {% csrf_token %}
    <h6 class='mt-5'>Are you want to delete this item ? </h6>
-   <input style="width: 100px;" class='btn btn-danger' type="submit" value="Delete" />
-   <a href="{% url 'cart' %}" class='btn btn-outline-primary'>Cancel </a>
+   <input class='btn btn-danger' type="submit" value="Delete" />
+   <!-- <a href="{% url 'cart' %}" class='btn btn-outline-primary'>Cancel </a> -->
+   <input value="Cancle" type="button" class="btn btn-primary" onclick="history.go(-1)">
   </form>
  </div>
 
