--- a/ecommerce/users/template/signup.html
+++ b/ecommerce/users/template/signup.html
@@ -43,7 +43,7 @@
               <div class="md-form form-sm ">
                 <p style="color:azure;">-</p> <i class="fa fa-user prefix "></i>
                 {{form_signup.username}}
-                <label for="form3">Your name </label>
+                <label for="form3">Username </label>
                 <div class="text-danger mt-2" style="font-size: x-small;">{{form_signup.username.errors}}</div>
                 
               </div>
