--- a/ecommerce/users/template/password_reset_done.html
+++ b/ecommerce/users/template/password_reset_done.html
@@ -1,4 +1,8 @@
-{% extends 'blog/base.html' %} {% block body %}
+{% extends 'blog/base.html' %} 
+{% block title %}
+Reset Password
+{% endblock %}
+{% block body %}
 
 <div class="alert alert-info">
  An email has been sent with instruction to reset your password
