--- a/ecommerce/blog/templates/blog/post_detail.html
+++ b/ecommerce/blog/templates/blog/post_detail.html
@@ -1,4 +1,8 @@
-{% extends 'blog/base.html' %} {% block body %}
+{% extends 'blog/base.html' %} 
+{% block logo %}
+Blog
+{%endblock%}
+{% block body %}
 
 <article class="media content-secti">
  <div class="row">
@@ -20,7 +24,7 @@
     <div class="row">
      <div class="col-lg-12">
 <h2 class="article-title">{{ object.title }}</h2>
-<p class="article-content">{{ object.content }}</p>
+<p class="article-content">{{ object.content|safe }}</p>
      </div>
     </div>
     
