--- a/ecommerce/store/template/store/allfpos.html
+++ b/ecommerce/store/template/store/allfpos.html
@@ -1,81 +1,109 @@
-{% extends 'store/main.html' %} {% load static %} {% block content %}
+{% extends 'blog/base.html' %} {% load static %}
+{%block fpoactive%}
+mm-active
+{%endblock%}
+<!-- --------------------------------------- -->
+{% block logo %}
+FPO's
+{%endblock%}
+<!-- ---------------------------------------- -->
+{% block title %}
+FPO's List
+{%endblock%}
+
+{% block body %}
 <div class="container">
- <div class="row">
-  <div class="col-lg-4 ">
-    <div class="text-center my-3">
-      <img src="{% static 'images/FPOlogo.png' %}" class="img-fluid w-50 mb-5" alt="">
-      <form id="form1" action="" method="POST" class="">
-        {% csrf_token %}
-        <input type="text" name="search" placeholder="Search by fpo's name or location..." />
+  <div class="row">
+    <div class="col-lg-12 ">
+      <div class="text-center my-3">
         
-        <!-- <input type="text" name="search1" placeholder="Search by location..." /> -->
-        <hr>
-        
-     
-    </div>
+        <form id="form1" action="" method="POST" class="">
+          {% csrf_token %}
+          <input type="text" name="search" placeholder="Search by fpo's name or location..." />
     
-    <!-- <input type="checkbox" name="acs" value="Dairy" onclick='printChecked()'>Dairy <br>
-        <input type="checkbox" name="acs" value="Fruit" onclick='printChecked()'>Fruits<br>
-        <input type="checkbox" name="acs" value="Grain" onclick='printChecked()'>Grain<br> -->
-    <div class="row my-3">
-      <div class="col-lg-12">
-        <div id="accordion">
-          <div class="car z-depth-1">
-            <div class="card-header">
-              <a class="card-link" data-toggle="collapse" href="#collapseOne" style="color: #1ce6e6; font-weight: 700;">
-                <i class="fas fa-filter"></i> Filter <i style="padding-left: 220px;" class="fas fa-angle-down"></i>
-              </a>
-            </div>
-            <div id="collapseOne" class="collapse " data-parent="#accordion">
-              <div class="card-body">
-                <div id="accordion1">
-                  <div class="car ">
-                    <div class="card-header">
-                      <a class="card-link" data-toggle="collapse" href="#collapseOne1" style="color: #1ce6e6; font-weight: 700;">
-                        Category <i onclick="upsideDown()" style="padding-left: 165px;" class="fas fa-angle-down"></i>
-                      </a>
-                    </div>
-                    <div id="collapseOne1" class="collapse " data-parent="#accordion1">
-                      <div class="card-body">
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-1" onclick='printChecked()'>
-                        Agro-Storage Centre<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-2" onclick='printChecked()'>
-                        Agro-Service Centre<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-3" onclick='printChecked()'>
-                        Agro-Processing Centre<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-4" onclick='printChecked()'>
-                        Agri-Information Centre<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-5" onclick='printChecked()'>
-                        Agri Transportation & Marketing Facilities<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-6" onclick='printChecked()'>
-                        Milk Producer Company<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-7" onclick='printChecked()'>
-                        Farm Producer Company<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-8" onclick='printChecked()'>
-                        Non- Farm Producer Company<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-9" onclick='printChecked()'>
-                        Fishery Producer Company<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-10" onclick='printChecked()'>
-                        Poultry<br>
-                        <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-11" onclick='printChecked()'>
-                        Goat<br>
-                        
+          <!-- <input type="text" name="search1" placeholder="Search by location..." /> -->
+          <hr>
+    
+    
+      </div>
+    
+      <!-- <input type="checkbox" name="acs" value="Dairy" onclick='printChecked()'>Dairy <br>
+            <input type="checkbox" name="acs" value="Fruit" onclick='printChecked()'>Fruits<br>
+            <input type="checkbox" name="acs" value="Grain" onclick='printChecked()'>Grain<br> -->
+      <div class="row my-3">
+        <div class="col-lg-12">
+          <div id="accordion">
+            <div class="car z-depth-1">
+              <div class="card-header">
+                <a class="card-link" data-toggle="collapse" href="#collapseOne" style="color: #1ce6e6; font-weight: 700;">
+                  <i class="fas fa-filter"></i> Filter <i style="padding-left: 220px;" class="fas fa-angle-down"></i>
+                </a>
+              </div>
+              <div id="collapseOne" class="collapse " data-parent="#accordion">
+                <div class="card-body">
+                  <div id="accordion1">
+                    <div class="car ">
+                      <div class="card-header">
+                        <a class="card-link" data-toggle="collapse" href="#collapseOne1"
+                          style="color: #1ce6e6; font-weight: 700;">
+                          Category <i onclick="upsideDown()" style="padding-left: 165px;" class="fas fa-angle-down"></i>
+                        </a>
+                      </div>
+                      <div id="collapseOne1" class="collapse " data-parent="#accordion1">
+                        <div class="card-body">
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-1"
+                            onclick='printChecked()'>
+                          Agro-Storage Centre<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-2"
+                            onclick='printChecked()'>
+                          Agro-Service Centre<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-3"
+                            onclick='printChecked()'>
+                          Agro-Processing Centre<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-4"
+                            onclick='printChecked()'>
+                          Agri-Information Centre<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-5"
+                            onclick='printChecked()'>
+                          Agri Transportation & Marketing Facilities<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-6"
+                            onclick='printChecked()'>
+                          Milk Producer Company<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-7"
+                            onclick='printChecked()'>
+                          Farm Producer Company<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-8"
+                            onclick='printChecked()'>
+                          Non- Farm Producer Company<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-9"
+                            onclick='printChecked()'>
+                          Fishery Producer Company<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-10"
+                            onclick='printChecked()'>
+                          Poultry<br>
+                          <input class="my-2" type="checkbox" style="width: 30px;" name="acs" value="c-11"
+                            onclick='printChecked()'>
+                          Goat<br>
+    
+                        </div>
                       </div>
                     </div>
                   </div>
+                  <!-- ------------------ -->
+    
                 </div>
-                <!-- ------------------ -->
-               
+                <!-- hgjkjg---------------- -->
+    
               </div>
-              <!-- hgjkjg---------------- -->
-  
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-   <div class="col-lg-8 ">
+ <div class="row">
+  
+   <div class="col-lg-12 ">
     <!-- <div class="wrapper"> -->
     <div class=" links ">
      <ul>
@@ -160,7 +188,7 @@
    </div>
  </div>
 
-
+</div>
 
 <script>
   function search(){
