--- a/ecommerce/store/template/store/services.html
+++ b/ecommerce/store/template/store/services.html
@@ -1,37 +1,38 @@
 {% extends 'blog/base.html' %}
 
-{%block blogactive%}
+{%block serviceactive%}
 mm-active
 {%endblock%}
 {% block nav %}
 <li class="btn-group nav-item">
- <a href="{% url 'post-create' %}" class="nav-link">
+ <a href="{% url 'service-create' %}" class="nav-link">
   <i class="nav-link-icon fa fa-edit"></i>
-  New post
+  New Service
  </a>
 </li>
 {%endblock%}
 {% block logo %}
-Blog
+Services
 {%endblock%}
 {% block title %}
-Blog
+Services
 {% endblock %}
 
 {% block body %}
 
 <div class="row">
  <div class="col-lg-12 col-12 col-md-12 col-xs-12">
-  {% for post in posts %}
+  {% for service in services %}
   <article class="media content-section ">
-   <img class="rounded-circle account-img" src="{{post.author.profile.image.url}}" alt="" srcset="">
+   <img class="rounded-circle account-img" src="{{service.service_by1.profile.image.url}}" alt="" srcset="">
    <div class="media-body col-lg-12 col-md-12 col-xs-12 col-12">
     <div class="article-metadata">
-     <a class="mr-2" href="{% url 'user-posts' post.author.username  %}">{{ post.author }}</a>
-     <small class="text-muted text-grey">{{ post.date_posted|date:"F d, Y" }}</small>
+     <a class="mr-2" href="/market/fpo_view/{{ service.service_by.id }}/">{{ service.service_by }}</a>
+     <small class="text-muted text-grey">{{ service.date_posted|date:"F d, Y" }}</small>
     </div>
-    <h2><a class="article-title" href="/blog/post/{{post.id}}">{{ post.title }}</a></h2>
-    <p class="article-content">{{ post.content|safe }}</p>
+    <h2><a class="article-title" href="#">{{ service.service_title }}</a></h2>
+    <h6><a class="article-title text-danger" href="#">Price: {{ service.service_price }}/{{service.service_unit}}</a></h6>
+    <p class="article-content ">{{ service.service_description|safe }}</p>
    </div>
   </article>
   {% endfor %}
@@ -48,14 +49,14 @@ Blog
   <a class="btn btn-outline-info mb-4" href="?page={{num}}">{{num}}</a>
   {% endif %}
   {% endfor %}
-  
-  
+
+
   {% if page_obj.has_next %}
-  <a class="btn btn-outline-info mb-4 "  href="?page={{page_obj.next_page_number}}">Next</a>
+  <a class="btn btn-outline-info mb-4 " href="?page={{page_obj.next_page_number}}">Next</a>
   <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
   {% endif %}
-  
-  
+
+
   {% endif %}
  </div>
 </div>
