--- a/ecommerce/store/template/store/store.html
+++ b/ecommerce/store/template/store/store.html
@@ -1,4 +1,35 @@
-{% extends 'store/main.html' %} {% load static %} {% block content %}
+{% extends 'blog/base.html' %} {% load static %} 
+
+{%block marketactive%}
+mm-active
+{%endblock%}
+<!-- --------------------------------------- -->
+{% block logo %}
+STore
+{%endblock%}
+<!-- ---------------------------------------- -->
+{% block title %}
+Market Place
+{%endblock%}
+<!-- ------------------------------------- -->
+{% block filter %}
+
+{%endblock%}
+<!-- ----------------------------------------- -->
+{% block nav %}
+<li class="ml-5">
+{% if user.is_authenticated  %}
+<sub><a href="{% url 'cart' %}">
+    <i class="fas fa-heart fa-3x"></i></sub>
+
+
+<p id="cart-total">{{total_items_in_cart}}</p>
+</a>
+{%endif%}
+</li>
+{%endblock%}
+<!-- --------------------------------------------- -->
+{% block body %}
 <!-- <div class="container">
   <div class="row">
      <div class="col-lg-4 text-center mt-5"> <h2 class="pt-5" style="margin-top: 120px; font-weight: 700; font-family: cursive;">WELCOME TO OUR SHOP</h2></div> -->
@@ -7,81 +38,91 @@
 </div> --> 
 <hr style="color: green;">
  <div class="container">
-  <div class="row">
-    <div class="col-lg-4 ">
-      
-      <div class="row my-3">
-        <div class="col-lg-12">
-          <div id="accordion">
-            <div class="car z-depth-1">
-              <div class="card-header">
-                <a class="card-link" data-toggle="collapse" href="#collapseOne">
-                <i class="fas fa-filter"></i> Filter  <i style="padding-left: 220px;" class="fas fa-angle-down"></i>
-                </a>
-              </div>
-              <div id="collapseOne" class="collapse " data-parent="#accordion">
-                <div class="card-body">
-                  <div id="accordion1">
-                    <div class="car ">
-                      <div class="card-header">
-                        <a class="card-link"  data-toggle="collapse" href="#collapseOne1">
-                          Category <i onclick="upsideDown()"   style="padding-left: 173px;" class="fas fa-angle-down"></i>
-                        </a>
-                      </div>
-                      <div id="collapseOne1" class="collapse " data-parent="#accordion1">
-                        <div class="card-body">
-                          <input type="checkbox" style="width: 30px;" name="acs" value="Dairy" onclick='printChecked()'> Dairy<br>
-                          <input type="checkbox" style="width: 30px;" name="acs" value="Fruit" onclick='printChecked()'> Fruits<br>
-                          <input type="checkbox" style="width: 30px;" name="acs" value="Grain" onclick='printChecked()'> Grain<br>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- ------------------ -->
-                  <div id="accordion2" class="my-2">
-                    <div class="car ">
-                      <div class="card-header">
-                        <a class="card-link" data-toggle="collapse" href="#collapseOne2">
-                          Sort by Rating <i onclick="upsideDown()" style="padding-left: 129px;" class="fas fa-angle-down"></i>
-                        </a>
-                      </div>
-                      <div id="collapseOne2" class="collapse " data-parent="#accordion2">
-                        <div class="card-body">
-
-                          <input type="checkbox" style="width: 30px;" name="acs1" value="r-1" onclick='printChecked1()'>  <span class="fa fa-star checked"></span>
-                           1<br>
-                          <input type="checkbox" style="width: 30px;" name="acs1" value="r-2" onclick='printChecked1()'> <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                           2<br>
-                          <input type="checkbox" style="width: 30px;" name="acs1" value="r-3" onclick='printChecked1()'> <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                           3<br>
-                          <input type="checkbox" style="width: 30px;" name="acs1" value="r-4" onclick='printChecked1()'> <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                           4<br>
-                          <input type="checkbox" style="width: 30px;" name="acs1" value="r-5" onclick='printChecked1()'> <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span>
-                          <span class="fa fa-star checked"></span> 5<br>
-                          
-                        </div>
-                      </div>
-                    </div>
+   <div class="row">
+     <div class="col-lg-12">
+<div class="row my-3">
+  <div class="col-lg-12">
+    <div id="accordion">
+      <div class="car z-depth-1">
+        <div class="card-header">
+          <a class="card-link" data-toggle="collapse" href="#collapseOne">
+            <i class="fas fa-filter"></i> Filter <i style="padding-left: 700px;" class="fas fa-angle-down"></i>
+          </a>
+        </div>
+        <div id="collapseOne" class="collapse " data-parent="#accordion">
+          <div class="card-body">
+            <div id="accordion1">
+              <div class="car ">
+                <div class="card-header">
+                  <a class="card-link" data-toggle="collapse" href="#collapseOne1">
+                    Category <i onclick="upsideDown()" style="padding-left: 50px;" class="fas fa-angle-down"></i>
+                  </a>
+                </div>
+                <div id="collapseOne1" class="collapse " data-parent="#accordion1">
+                  <div class="card-body">
+                    <input type="checkbox" style="width: 30px;" name="acs" value="Dairy" onclick='printChecked()'>
+                    Dairy<br>
+                    <input type="checkbox" style="width: 30px;" name="acs" value="Fruit" onclick='printChecked()'>
+                    Fruits<br>
+                    <input type="checkbox" style="width: 30px;" name="acs" value="Grain" onclick='printChecked()'>
+                    Grain<br>
                   </div>
                 </div>
-                <!-- hgjkjg---------------- -->
-                
               </div>
             </div>
+            <!-- ------------------ -->
+            <div id="accordion2" class="my-2">
+              <div class="car ">
+                <div class="card-header">
+                  <a class="card-link" data-toggle="collapse" href="#collapseOne2">
+                    Sort by Rating <i onclick="upsideDown()" style="padding-left: 70px;" class="fas fa-angle-down"></i>
+                  </a>
+                </div>
+                <div id="collapseOne2" class="collapse " data-parent="#accordion2">
+                  <div class="card-body">
+
+                    <input type="checkbox" style="width: 30px;" name="acs1" value="r-1" onclick='printChecked1()'> <span
+                      class="fa fa-star checked"></span>
+                    1<br>
+                    <input type="checkbox" style="width: 30px;" name="acs1" value="r-2" onclick='printChecked1()'> <span
+                      class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    2<br>
+                    <input type="checkbox" style="width: 30px;" name="acs1" value="r-3" onclick='printChecked1()'> <span
+                      class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    3<br>
+                    <input type="checkbox" style="width: 30px;" name="acs1" value="r-4" onclick='printChecked1()'> <span
+                      class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    4<br>
+                    <input type="checkbox" style="width: 30px;" name="acs1" value="r-5" onclick='printChecked1()'> <span
+                      class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span> 5<br>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- hgjkjg---------------- -->
+
         </div>
       </div>
     </div>
   </div>
-    <div class="col-lg-8 ">
+</div>
+     </div>
+   </div>
+  <div class="row">
+    
+    <div class="col-lg-12 ">
       
     <!-- <div class="wrapper"> -->
       <div class=" links ">
@@ -93,15 +134,15 @@
             <i class="fas fa-th-list"></i>
             List View</li>
         </ul>
-        <hr>
+        
         <form id="form1" action="" method="POST" class="">
           {% csrf_token %}
           <input type="text" name="search" placeholder="Search by name..." />
-          <hr>
+          
         </form>
-        <li class="text-dark font-weight-light ml-2 text-center">
+        <li class="text-dark font-weight-light my-2 ">
           {{total_result}} Results</li>
-        <hr>
+        
         
       </div>
       <div class="view_main">
