--- a/ecommerce/users/template/password_reset_complete.html
+++ b/ecommerce/users/template/password_reset_complete.html
@@ -1,4 +1,8 @@
-{% extends 'blog/base.html' %} {% block body %}
+{% extends 'blog/base.html' %} 
+{% block title %}
+Reset Password Done
+{% endblock %}
+{% block body %}
 
 <div class="alert alert-info">
  Your password has been changed.
