--- a/ecommerce/users/template/password_reset_confirm.html
+++ b/ecommerce/users/template/password_reset_confirm.html
@@ -1,4 +1,8 @@
-{% extends 'blog/base.html' %} {% block body %}
+{% extends 'blog/base.html' %}
+{% block title %}
+Reset Password
+{% endblock %}
+{% block body %}
 {% load crispy_forms_tags %}
 <div class="content-section">
  <form action="" method="POST">
