--- a/ecommerce/store/template/store/services.html
+++ b/ecommerce/store/template/store/services.html
@@ -27,7 +27,7 @@ Services
    <img class="rounded-circle account-img" src="{{service.service_by1.profile.image.url}}" alt="" srcset="">
    <div class="media-body col-lg-12 col-md-12 col-xs-12 col-12">
     <div class="article-metadata">
-     <a class="mr-2" href="/market/fpo_view/{{ service.service_by.id }}/">{{ service.service_by }}</a>
+     <a class="mr-2" href="/market/ngo_view/{{ service.service_by.id }}/">{{ service.service_by.ngo_username }}</a>
      <small class="text-muted text-grey">{{ service.date_posted|date:"F d, Y" }}</small>
     </div>
     <h2><a class="article-title" href="#">{{ service.service_title }}</a></h2>
