--- a/ecommerce/home/templates/index.html
+++ b/ecommerce/home/templates/index.html
@@ -77,6 +77,10 @@
       <!-- Collapsible content -->
   <!-- Social Icon  -->
   <ul class="navbar-nav nav-flex-icons">
+    <li class="nav-item">
+      <a class="nav-link mr-2" href="{% url 'store' %}"><i class="fas fa-store"></i>
+        MarketPlace</a>
+    </li>
     {% if user.is_authenticated %}
     <li class="nav-item">
       <a class="nav-link mr-2" href="{% url 'logout' %}"><i  class="fa fa-sign-in-alt"></i>
@@ -108,13 +112,21 @@
         <li>
         <hr class="dropdown-divider" />
         </li>
-        <li>
-          <a class="dropdown-item" href="{% url 'fpo_dashboard' %}"><i class=" fas fa-chart-line"></i> Dashboard
-          </a>
-        </li>
+        
         
         {% endif %}
-        
+        {% if name == 'NGO' %}
+<li>
+  <a class="dropdown-item" href="{% url 'ngo_dashboard' %}"><i class=" fas fa-chart-line"></i> Dashboard
+  </a>
+</li>
+        {%endif%}
+        {% if name == 'FPO' %}
+<li>
+  <a class="dropdown-item" href="{% url 'fpo_dashboard' %}"><i class=" fas fa-chart-line"></i> Dashboard
+  </a>
+</li>
+        {%endif%}
       </ul>
     </li>
     
@@ -127,10 +139,7 @@
       Login</a>
     </li>
     {% endif %}
-    <li class="nav-item">
-      <a class="nav-link mr-5" href="{% url 'store' %}"><i class="fas fa-store"></i>
-        MarketPlace</a>
-    </li>
+    
   </ul>
     </div>
   
@@ -169,11 +178,17 @@
          </h5>
           <div class="col-lg-10"></div>
           <div class="col-lg-3 mt-2">
-            {% if user.is_authenticated and user.is_staff  %}
+            {% if user.is_authenticated and user.is_staff   %}
+
+
+            
+            {% elif  group == True %}
             
             {% elif user.is_authenticated %}
             
             <a style="display: block;" class="btn btn-outline-white" href="{% url 'fpo_register' %}"><i class="fas fa-book "></i> Register As An FPO
+            </a>
+            <a style="display: block;" class="btn btn-outline-white" href="{% url 'ngo_register' %}"><i class="fas fa-book "></i> Register As An NGO
             </a>
             
             {% else %}
