--- a/ecommerce/users/template/fpo_dashboard.html
+++ b/ecommerce/users/template/fpo_dashboard.html
@@ -67,12 +67,7 @@
         New post
        </a>
       </li>
-      <li class="btn-group nav-item">
-       <a href="{% url 'service-create' %}" class="nav-link">
-        <i class="nav-link-icon fa fa-edit"></i>
-        New Service
-       </a>
-      </li>
+      
 
      </ul>
     </div>
@@ -159,17 +154,18 @@
      <div class="app-sidebar__inner">
       <ul class="vertical-nav-menu">
        <li class="app-sidebar__heading">Dashboards</li>
-       <li>
-        <a href="{% url 'fpo_dashboard' %}" class="mm-active">
-         <i class="fas fa-chart-line"></i></i> Fpo
-         Dashboard 
-        </a>
-       </li>
+       
        <li>
         <a href="{% url 'home' %}" class="">
          <i class="fas fa-home"></i></i> Home 
         </a>
        </li>
+      <li>
+        <a href="{% url 'fpo_dashboard' %}" class="mm-active">
+          <i class="fas fa-chart-line"></i></i> Fpo
+          Dashboard
+        </a>
+      </li>
        <li>
         <a href="{% url 'store' %}" class="">
          <i class="fas fa-store"></i></i> Market Place
@@ -369,85 +365,8 @@
       </div>
       <!-- ------------------------------------------ end ---------------------------------------- -->
      </div>
-    <div class="row">
-      <div class="col-md-6 col-xl-12">
-        <div class="card mb-3 widget-content">
-          <div class="widget-content-outer">
-            <div class="widget-content-wrapper">
-              <div class="widget-content-left">
-                <div class="widget-heading">Services</div>
-                <div class="widget-subheading">Total services provided by you</div>
-              </div>
-              <div class="widget-content-right">
-                <div class="widget-numbers text-success">{{total_services}}</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    
-    </div>
-    <div class="row">
-      <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 col-12">
-        <div class="main-card mb-3 card">
-          <div class="card-header"> Services
-            <div class="btn-actions-pane-right">
-    
-            </div>
-          </div>
     
     
-    
-          <div class="table-responsive">
-            <table class="align-middle mb-0 table table-borderless table-striped table-hover">
-              <thead>
-                <tr>
-                  <th class="text-center">Date</th>
-                  <th class="text-center">Service Name</th>
-                  <th>Description</th>
-                  <th class="text-center"></th>
-                  <th class="text-center"></th>
-    
-                </tr>
-              </thead>
-              <tbody>
-                {% for service in services %}
-                <tr>
-                  <td class="text-center text-muted">{{service.date_posted}}</td>
-                  <td>
-                    <div class="widget-content p-0">
-                      <div class="widget-content-wrapper">
-                        <div class="widget-content-left mr-3">
-    
-                        </div>
-                        <div class="widget-content-left flex2">
-                          <div class="widget-heading">{{service.service_title}}</div>
-                          <div class="widget-subheading opacity-7"></div>
-                        </div>
-                      </div>
-                    </div>
-                  </td>
-                  <td class="text-center">{{service.service_description|safe}}</td>
-                  <td class="text-center">
-                    <div class="widget-content-right"><a class=" my-4 " href="/market/service/{{service.id}}/update/">Edit <i
-                          class="nav-link-icon fa fa-edit"></i></a></div>
-                  </td>
-                  <td class="text-center">
-<div class="widget-content-right"><a class=" my-4 btn btn-outline-danger "
-    href="/market/service/{{service.id}}/delete/"><i class="fas fa-trash-alt"></i></a></div>                  </td>
-                </tr>
-                {%endfor%}
-              </tbody>
-            </table>
-          </div>
-    
-    
-    
-    
-    
-        </div>
-      </div>
-    </div>
      <div class="row">
       <div class="col-md-6 col-xl-12">
        <div class="card mb-3 widget-content">
@@ -469,7 +388,7 @@
      <div class="row">
       <div class="col-md-12">
        <div class="main-card mb-3 card">
-        <div class="card-header">Active Users
+        <div class="card-header">Interested Customer
          <div class="btn-actions-pane-right">
           
          </div>
