--- a/ecommerce/users/template/ngo_dashboard.html
+++ b/ecommerce/users/template/ngo_dashboard.html
@@ -1,8 +1,4 @@
 {% load static %}
-
-
-<!-- ----------------------------------------------------------------------------------------------- -->
-{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -11,43 +7,23 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta http-equiv="Content-Language" content="en">
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-{% if title %}
-<title>Blog-{{title}}</title>
-{% else %}
-<title>Blog</title>
-{% endif %}
+ <title>Analytics Dashboard - This is an example dashboard created using build-in elements and components.</title>
  <meta name="viewport"
   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
  <meta name="description" content="This is an example dashboard created using build-in elements and components.">
  <meta name="msapplication-tap-highlight" content="no">
  <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
  <!-- Font Awesome -->
-<!-- <link rel="stylesheet" href="{% static 'css_bs/bootstrap.min.css' %}"> -->
-<!-- Material Design Bootstrap -->
-<link rel="stylesheet" href="{% static 'css_bs/mdb.min.css' %}">
-<!-- Your custom styles (optional) -->
-<!-- <link rel="stylesheet" href="{% static 'css_bs/style1.css' %}"> -->
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
  <link href="{% static 'css/fpo_dashboard.css' %}" rel="stylesheet">
- <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon">
- <!-- Font Awesome -->
-
-<link rel="stylesheet" href="{% static 'css/store.css' %}" type="text/css" />
-<link rel="stylesheet" href="{% static 'css/product_view1.css' %}" type="text/css" />
-<link rel="stylesheet" href="{% static 'css/fpo_view.css' %}" type="text/css" />
-<link rel="stylesheet" href="{% static 'css/createproduct.css' %}" type="text/css" />
-<link rel="stylesheet" href="{% static 'css/viewpage2.css' %}" type="text/css" />
- <link rel="stylesheet" href="{% static 'css/blog1.css' %}">
-
 </head>
 
 <body>
  <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
   <div class="app-header header-shadow">
-   
    <div class="app-header__logo">
     <div class="logo-src text-uppercase">
-     <h3 class="">{% block logo %}{%endblock%}</h1>
+     <h3 class="">Dashboard</h1>
     </div>
     <div class="header__pane ml-auto">
      <div>
@@ -80,48 +56,46 @@
    <div class="app-header__content">
     <div class="app-header-left">
 
-     
+     <ul class="header-menu nav">
+      
+      <li class="btn-group nav-item">
+       <a href="{% url 'service-create' %}" class="nav-link">
+        <i class="nav-link-icon fa fa-edit"></i>
+        New Service
+       </a>
+      </li>
+
+     </ul>
     </div>
-    
-    <div  class="app-header-right ">
-      
+    <div class="app-header-right">
      <div class="header-btn-lg pr-0">
-       
       <div class="widget-content p-0">
-        
        <div class="widget-content-wrapper">
-      <ul class="header-menu nav mx-2">
-      
-      
-        {% block nav %}
-      
-        {% endblock %}
-      </ul>
         <div class="widget-content-left">
-          
-          {{request.user.email}}
-         <div class="btn-group" style="color: black;">
-           
+         <div class="btn-group">
           <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-           
-           <i style="color: black;" class="fa fa-angle-down mx-2 opacity-8"></i>
+           <img width="42" class="rounded-circle" src="assets/images/avatars/1.jpg" alt="">{{request.user.email}}
+           <i class="fa fa-angle-down ml-2 opacity-8"></i>
           </a>
           <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
-            {% if user.is_authenticated %}
-            <button type="button" tabindex="0" class="dropdown-item"><a href="{% url 'logout' %}">Logout</a></button>
-            <button type="button" tabindex="0" class="dropdown-item"><a href="{% url 'profile' %}">Profile</a></button>
-            {% else %}
-            <button type="button" tabindex="0" class="dropdown-item"><a href="{% url 'login' %}">Login</a></button>
+           {% if user.is_authenticated %}
+           <button type="button" tabindex="0" class="dropdown-item"><a href="{% url 'logout' %}">Logout</a></button>
+           <button type="button" tabindex="0" class="dropdown-item"><a href="{% url 'profile' %}">Profile</a></button>
+           {% else %}
+           <button type="button" tabindex="0" class="dropdown-item"><a href="{% url 'login' %}">Login</a></button>
 
-            {% endif %}
-           
+           {% endif %}
 
           </div>
-          
          </div>
         </div>
         <div class="widget-content-left  ml-3 header-user-info">
-         
+         <div class="widget-heading">
+          Alina Mclourd
+         </div>
+         <div class="widget-subheading">
+          VP People Manager
+         </div>
         </div>
         <div class="widget-content-right header-user-info ml-3">
          <button type="button" class="btn-shadow p-1 btn btn-primary btn-sm show-toastr-example">
@@ -168,7 +142,6 @@
       <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
        <span class="btn-icon-wrapper">
         <i class="fa fa-ellipsis-v fa-w-6"></i>
-        
        </span>
       </button>
      </span>
@@ -176,50 +149,43 @@
     <div class="scrollbar-sidebar">
      <div class="app-sidebar__inner">
       <ul class="vertical-nav-menu">
-       
+       <li class="app-sidebar__heading">Dashboards</li>
        
        <li>
         <a href="{% url 'home' %}" class="">
          <i class="fas fa-home"></i></i> Home
         </a>
        </li>
-      {% if user.is_staff %}
-      <li>
-        <a href="{% url 'fpo_dashboard' %}">
-          <i class="fas fa-chart-line"></i></i> 
-          Dashboard
-        </a>
-      </li>
-      {%endif%}
-      
        <li>
-        <a href="{% url 'store' %}" class="{%block marketactive%}{%endblock%}">
+        <a href="{% url 'ngo_dashboard' %}" class="mm-active">
+         <i class="fas fa-chart-line"></i></i> Ngo
+         Dashboard
+        </a>
+       </li>
+       <li>
+        <a href="{% url 'store' %}" class="">
          <i class="fas fa-store"></i></i> Market Place
 
         </a>
        </li>
        <li>
-        <a href="{% url 'blog-home' %}" class="{%block blogactive%}{%endblock%}">
-         <i class="fas fa-blog"></i> Blog
+        <a href="{% url 'blog-home' %}" class="">
+         <i class="fas fa-blog"></i></i> Blog
 
         </a>
        </li>
        <li>
         <a href="{% url 'fpo_list' %}" class="{%block fpoactive%}{%endblock%}">
-        <i class="fas fa-users"></i> FPO's List
+         <i class="fas fa-users"></i> FPO's List
 
         </a>
        </li>
        <li>
         <a href="{% url 'services' %}" class="{%block serviceactive%}{%endblock%}">
-        <i class="fas fa-users"></i> Services
+         <i class="fas fa-users"></i> Services
 
         </a>
        </li>
-      {% block filter %}
-     
-      {% endblock %}
-
       </ul>
      </div>
     </div>
@@ -233,8 +199,7 @@
          <i class="pe-7s-car icon-gradient bg-mean-fruit">
          </i>
         </div>
-        <div>{% block title %}
-        {% endblock %}
+        <div>Analytics Dashboard
          <div class="page-title-subheading">Welcome
          </div>
         </div>
@@ -242,29 +207,100 @@
 
       </div>
      </div>
-     
-    <div class="row">
-     <div class="col-md-12">
-      {% if messages %}
-      {% for message in messages %}
-      <div class="alert alert-{{message.tags}}">
-       {{message}}
-      </div>
-      {% endfor %}
-      {% endif %}
-      {% block body %}{% endblock %}
-
-    </div>
     
+     <!-- ------------------------ products and blogs--------------------------------------------- -->
+     
+     <div class="row">
+      <div class="col-md-6 col-xl-12">
+       <div class="card mb-3 widget-content">
+        <div class="widget-content-outer">
+         <div class="widget-content-wrapper">
+          <div class="widget-content-left">
+           <div class="widget-heading">Services</div>
+           <div class="widget-subheading">Total services provided by you</div>
+          </div>
+          <div class="widget-content-right">
+           <div class="widget-numbers text-success">{{total_services}}</div>
+          </div>
+         </div>
+        </div>
+       </div>
+      </div>
+
+     </div>
+     <div class="row">
+      <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 col-12">
+       <div class="main-card mb-3 card">
+        <div class="card-header"> Services
+         <div class="btn-actions-pane-right">
+
+         </div>
+        </div>
+
+
+
+        <div class="table-responsive">
+         <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+          <thead>
+           <tr>
+            <th class="text-center">Date</th>
+            <th class="text-center">Service Name</th>
+            <th>Description</th>
+            <th class="text-center"></th>
+            <th class="text-center"></th>
+
+           </tr>
+          </thead>
+          <tbody>
+           {% for service in services %}
+           <tr>
+            <td class="text-center text-muted">{{service.date_posted}}</td>
+            <td>
+             <div class="widget-content p-0">
+              <div class="widget-content-wrapper">
+               <div class="widget-content-left mr-3">
+
+               </div>
+               <div class="widget-content-left flex2">
+                <div class="widget-heading">{{service.service_title}}</div>
+                <div class="widget-subheading opacity-7"></div>
+               </div>
+              </div>
+             </div>
+            </td>
+            <td class="text-center">{{service.service_description|safe}}</td>
+            <td class="text-center">
+             <div class="widget-content-right"><a class=" my-4 " href="/market/service/{{service.id}}/update/">Edit <i
+                class="nav-link-icon fa fa-edit"></i></a></div>
+            </td>
+            <td class="text-center">
+             <div class="widget-content-right"><a class=" my-4 btn btn-outline-danger "
+               href="/market/service/{{service.id}}/delete/"><i class="fas fa-trash-alt"></i></a></div>
+            </td>
+           </tr>
+           {%endfor%}
+          </tbody>
+         </table>
+        </div>
+
+
+
+
+
+       </div>
+      </div>
      </div>
      
+     
+     
+    
+
+    </div>
    </div>
    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
   </div>
  </div>
  <script type="text/javascript" src="{% static 'js/fpo_dashboard.js' %}"></script>
-<script src="{% static 'js/product_view.js' %}"></script>
-<script src="{% static 'js/createproduct.js' %}"></script>
 </body>
 
 </html>
