--- a/ecommerce/blog/templates/blog/post_form.html
+++ b/ecommerce/blog/templates/blog/post_form.html
@@ -31,6 +31,13 @@ New Post
        <label for="form3">Tag</label>
 
    </div>
+   <!-- <div class="md-form form-sm ">
+    
+    <p style="color:azure;">-</p></i>
+    {{form.image}}
+       <label for="form3">Tag</label>
+
+   </div> -->
 
    <div class="md-form form-sm ">
     <p style="color:azure;">-</p> 
