--- a/ecommerce/blog/templates/blog/base.html
+++ b/ecommerce/blog/templates/blog/base.html
@@ -14,7 +14,7 @@
 {% if title %}
 <title>Blog-{{title}}</title>
 {% else %}
-<title>Blog</title>
+<title>FPO Connect</title>
 {% endif %}
  <meta name="viewport"
   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
