--- a/ecommerce/store/template/store/main.html
+++ b/ecommerce/store/template/store/main.html
@@ -33,7 +33,7 @@
     <!-- ---------------------------------------------------------------------------------------------- -->
     
     
-    <title>Ecommerce</title>
+    <title>FPO Connect</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent " id="customnav">
